# eth-api-prototoype

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/eth_backend/: Cargo.toml  eth_backend.did
src/eth_backend/src/: evm_rpc.wasm  lib.rs  test.rs  types.rs
src/eth_frontend/: package.json
src/eth_frontend/src/: App.js
