[package]
name = "eth_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.16"
ic-cdk-timers = "0.10" # Feel free to remove this dependency if you don't need timers
ethers-core = "2.0.14"
serde = "1.0.197"
getrandom = { version = "0.2.12", features = ["custom"] }

[dev-dependencies]
once_cell = "1.15"
tokio = { version = "1.0", features = ["full", "macros"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
libflate = "2.1.0"
rand = "0.8.5"
pocket-ic = "5.0.0"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/dfinity/wasm-bindgen", rev = "af4023035c9ef832017bcb65502c218382ff61b2" }
